--- a/aac/ViewModelExample/app/build.gradle
+++ b/aac/ViewModelExample/app/build.gradle
@@ -45,7 +45,7 @@ dependencies {
     implementation 'androidx.activity:activity-ktx:1.6.1'
     implementation 'androidx.fragment:fragment-ktx:1.5.4'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-savedstate:2.5.1'
-
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
