--- a/aac/ViewModelExample/app/build.gradle
+++ b/aac/ViewModelExample/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -31,7 +32,8 @@ android {
         jvmTarget = '1.8'
     }
     buildFeatures {
-        viewBinding = true
+        // viewBinding = true
+        dataBinding = true
     }
 }
 
