--- a/frozencoder-inflearn/BookSearchApp/build.gradle
+++ b/frozencoder-inflearn/BookSearchApp/build.gradle
@@ -5,6 +5,7 @@ plugins {
     id 'org.jetbrains.kotlin.android' version '1.7.20' apply false
     id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin' version '2.0.1' apply false
     id 'androidx.navigation.safeargs.kotlin' version '2.4.2' apply false
+    id 'org.jetbrains.kotlin.plugin.serialization' version '1.7.20' apply false
 }
 
 task clean(type: Delete) {
