--- a/frozencoder-inflearn/BookSearchApp/app/build.gradle
+++ b/frozencoder-inflearn/BookSearchApp/app/build.gradle
@@ -89,4 +89,10 @@ dependencies {
     // Kotlin serialization
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.4.1'
 
+    // DataStore
+    implementation 'androidx.datastore:datastore-preferences:1.0.0'
+
+    // Paging
+    implementation 'androidx.room:room-paging:2.4.3'
+    implementation 'androidx.paging:paging-runtime-ktx:3.1.1'
 }
