--- a/frozencoder-inflearn/BookSearchApp/app/build.gradle
+++ b/frozencoder-inflearn/BookSearchApp/app/build.gradle
@@ -95,4 +95,7 @@ dependencies {
     // Paging
     implementation 'androidx.room:room-paging:2.4.3'
     implementation 'androidx.paging:paging-runtime-ktx:3.1.1'
+
+    // WorkManager
+    implementation 'androidx.work:work-runtime-ktx:2.7.1'
 }
